[package]
name = "whkd"
version = "0.2.7"
description = "A simple hotkey daemon for Windows"
repository = "https://github.com/LGUG2Z/whkd"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
active-win-pos-rs = "0.9"
chumsky = "0.9"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
dirs = "6"
lazy_static = "1"
parking_lot = "0.12"
win-hotkeys = "0.4"
