[package]
name = "whkd"
description = "A simple hotkey daemon for Windows"
version.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["core", "parser"]

[workspace.package]
version = "0.2.10"
repository = "https://github.com/LGUG2Z/whkd"
edition = "2021"

[workspace.dependencies]
whkd-core = { version = "0.2.8", path = "core" }
whkd-parser = { version = "0.2.8", path = "parser" }
active-win-pos-rs = "0.9"
chumsky = "0.9"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
dirs = "6"
lazy_static = "1"
parking_lot = "0.12"
win-hotkeys = "0.5"

[dependencies]
whkd-core.workspace = true
whkd-parser.workspace = true
active-win-pos-rs.workspace = true
clap.workspace = true
color-eyre.workspace = true
dirs.workspace = true
lazy_static.workspace = true
parking_lot.workspace = true
win-hotkeys.workspace = true
